@@ -338,6 +338,7 @@ Unreleased changes (1.0-dev)
 126. NUTCH-636 - Httpclient plugin https doesn't work on IBM JRE
      (Curtis d'Entremont, ab)
 
+127. NUTCH-683 - NUTCH-676 broke CrawlDbMerger. (dogacan)
      
 Release 0.9 - 2007-04-02
 
